--- a/ControlBasis/Base.lproj/Main.storyboard
+++ b/ControlBasis/Base.lproj/Main.storyboard
@@ -21,9 +21,6 @@
                                 <rect key="frame" x="147" y="94" width="82" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Рассчитать"/>
-                                <connections>
-                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Da2-C7-z72"/>
-                                </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xkf-S2-FjC">
                                 <rect key="frame" x="312" y="128" width="49" height="31"/>
@@ -86,7 +83,11 @@
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="WPR-ho-cfs" appends="YES" id="fdP-QD-Mb9"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="amountLabel" destination="ICV-24-ZOM" id="p3M-fS-qvz"/>
@@ -96,6 +97,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="WPR-ho-cfs">
+                    <connections>
+                        <action selector="respondToTapGesture:" destination="BYZ-38-t0r" id="CxH-dA-VZx"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="141.59999999999999" y="133.5832083958021"/>
         </scene>
